--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -17,3 +17,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.swiper-container {
+  width: 100%;
+  height: 400px;
+  padding: 0 50px;
+}
+.swiper-button-next,
+.swiper-button-prev {
+    color: snow !important;
+    fill: snow !important;
+    stroke: snow !important;
+}
