--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -1,6 +1,7 @@
 @import './_variables.scss';
 
 .container {
+  width: "100%";
   padding: 4rem 1rem;
   display:flex;
   flex-wrap: wrap;
@@ -29,15 +30,6 @@
   }
 }
 
-.historyPostBox {
-  background-color: $gray--400;
-  border-radius: 0.5rem;
-  font-weight: 600;
-  padding: 0.4rem 0.2rem;
-  height: 340px;
-  overflow-y: scroll;
-}
-
 .newestPostTagBox {
   min-width: 3rem;
   max-width: 10rem;
@@ -61,36 +53,4 @@
   width: 4rem;
   height: 4rem;
   border-radius: 4rem;
-}
-
-.createPostHeaderBox {
-  width: 90%;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.createPostHeaderText {
-  text-align: center;
-}
-
-@media screen and (min-width: 48em) {
-  
-  .createPostHeaderBox {
-    justify-content: space-between;
-    flex-direction: row;
-  }
-
-  .createPostHeaderText {
-    text-align: start;
-  }
-
-}
-
-@media screen and (min-width: 62em) {
-
-  .createPostHeaderBox {
-    width: 70%;
-  }
-
 }
