--- a/frontend/styles/CreatePost.module.scss
+++ b/frontend/styles/CreatePost.module.scss
@@ -19,6 +19,34 @@
 .createPostHeaderText {
   text-align: center;
 }
+
+.tagBox {
+  min-width: 6rem;
+  max-width: 15rem;
+  max-height: 2rem;
+  border-radius: 1.5rem;
+  background-color: white;
+  font-size: 1rem;
+  margin: 0.2rem;
+  padding: 0.6rem 0;
+
+  span {
+    max-width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+}
+
+.imageDropzone {
+  background-color: $gray--400;
+  border-radius: 0.5rem;
+  margin: 0.5rem 0.5rem;
+  color: black;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
   
 @media screen and (min-width: 48em) {
     
