--- a/frontend/styles/CreatePost.module.scss
+++ b/frontend/styles/CreatePost.module.scss
@@ -47,6 +47,29 @@
   font-size: 0.8rem;
   font-weight: 600;
 }
+
+.previewImage {
+  background-color: $gray--400;
+  border-radius: 0.5rem;
+  margin: 0.5rem 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  color: black;
+  
+
+  img {
+    width: 90%;
+  }
+}
+
+.deleteImageButton {
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+  cursor: pointer;
+}
   
 @media screen and (min-width: 48em) {
     
